1999-11-18  Ulrich Drepper  <drepper@cygnus.com>

	* locale/programs/locale.c: Don't handle LC_ALL together with the
	other categories when printing the value.
	Patch by Akira YOSHIYAMA <yosshy@tkf.att.ne.jp>.

	* locale/locale.h: Correct comment about LC_ALL.

1999-11-17  Ulrich Drepper  <drepper@cygnus.com>

	* locale/programs/ld-ctype.c (ctype_output): Correct computation of
	nelems.  Correctly compute index for additional character classes.
	(ctype_read): Handle charclass and charconv definitions.  Also
	recognize arbitrary strings as mapping names.
	* locale/programs/ld-time.c (time_finish): Correctly skip over wide
	character era strings.
	* locale/lc-time.c (_nl_get_era_entry): Correctly skip era name
	and format for wide characters.
	* time/strftime.c: Correctly determine era information for wide
	wcsftime.
	* wctrans.c: Fix after removal of second endianess table.
	* wctype/wctype.h (_ISwbit): Correctly handle bits > 16.
	Patches by Shinya Hanataka <hanataka@abyss.rim.or.jp>.

	* wcsmbs/wcwidth.h (internal_wcwidth): Reject non-printable characters.
	* wcsmbs/wcswidth.c (wcswidth): Don't forget to decrement counter n.

	* sysdeps/unix/sysv/linux/alpha/sys/procfs.h: Remove greg_t,
	gregset_t, fpregset_t, and NGREG definitions.

	* locale/programs/ld-ctype.c: Implement character width information
	handling.

1999-11-09  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/grantpt.c (grantpt): Add support for devfs.

	* sysdeps/unix/sysv/linux/getpt.c (__getpt): Check for devfs.
	Patch by German Jose Gomez Garcia <german@pinon.ccu.uniovi.es>.

	* sysdeps/unix/sysv/linux/linux_fsinfo.h (DEVFS_SUPER_MAGIC): Added.

1999-11-17  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/gnu/netinet/tcp.h: Add TCP_CORK definition.

1999-11-07  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/scsi/scsi_ioctl.h: New file with some
	defines from Linux scsi_ioctl.h header.

	* sysdeps/unix/sysv/linux/Makefile (sysdep_headers): Added
	scsi_ioctl.h.