@@ -1,3 +1,12 @@
+1999-11-18  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/linux_fsinfo.h: Sorted entries and added
+	comments.
+
+	* sysdeps/unix/sysv/linux/getpt.c: Include linux_fsinfo.h instead
+	of defining *_SUPER_MAGIC.
+	* sysdeps/unix/sysv/linux/grantpt.c: Likewise.
+
 1999-11-18  Ulrich Drepper  <drepper@cygnus.com>
 
 	* locale/programs/locale.c: Don't handle LC_ALL together with the
